Java sdk v2 migration (#1089)
Co-authored-by: salander85 <sarah.lander@commercetools.com>
Co-authored-by: Sarah Lander <70885646+salander85@users.noreply.github.com>