@@ -1,90 +1,60 @@
 package com.commercetools.sync.integration.externalsource.states;
 
+import static com.commercetools.api.models.common.LocalizedString.ofEnglish;
 import static com.commercetools.sync.commons.asserts.statistics.AssertionsForStatistics.assertThat;
-import static com.commercetools.sync.integration.commons.utils.SphereClientUtils.CTP_SOURCE_CLIENT;
-import static com.commercetools.sync.integration.commons.utils.SphereClientUtils.CTP_TARGET_CLIENT;
-import static com.commercetools.sync.integration.commons.utils.StateITUtils.deleteStates;
-import static com.commercetools.sync.integration.commons.utils.StateITUtils.deleteStatesFromTargetAndSource;
-import static com.commercetools.sync.integration.commons.utils.StateITUtils.getStateByKey;
-import static com.commercetools.sync.services.impl.UnresolvedReferencesServiceImpl.CUSTOM_OBJECT_TRANSITION_CONTAINER_KEY;
-import static com.commercetools.tests.utils.CompletionStageUtil.executeBlocking;
-import static io.sphere.sdk.models.LocalizedString.ofEnglish;
-import static io.sphere.sdk.states.State.referenceOfId;
-import static io.sphere.sdk.utils.CompletableFutureUtils.exceptionallyCompletedFuture;
-import static io.sphere.sdk.utils.SphereInternalUtils.asSet;
+import static com.commercetools.sync.integration.commons.utils.ITUtils.*;
+import static com.commercetools.sync.integration.commons.utils.StateITUtils.*;
+import static com.commercetools.sync.integration.commons.utils.TestClientUtils.CTP_TARGET_CLIENT;
 import static java.lang.String.format;
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
-import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.concurrent.ThreadLocalRandom.current;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.when;
+import static org.assertj.core.api.Assertions.assertThat;
 
-import com.commercetools.sync.commons.helpers.ResourceKeyIdGraphQlRequest;
-import com.commercetools.sync.commons.models.WaitingToBeResolvedTransitions;
-import com.commercetools.sync.commons.utils.CaffeineReferenceIdToKeyCacheImpl;
-import com.commercetools.sync.commons.utils.CtpQueryUtils;
-import com.commercetools.sync.commons.utils.ReferenceIdToKeyCache;
-import com.commercetools.sync.services.UnresolvedReferencesService;
+import com.commercetools.api.client.ProjectApiRoot;
+import com.commercetools.api.defaultconfig.ApiRootBuilder;
+import com.commercetools.api.models.state.State;
+import com.commercetools.api.models.state.StateDraft;
+import com.commercetools.api.models.state.StateDraftBuilder;
+import com.commercetools.api.models.state.StateResourceIdentifier;
+import com.commercetools.api.models.state.StateResourceIdentifierBuilder;
+import com.commercetools.api.models.state.StateRoleEnum;
+import com.commercetools.api.models.state.StateTypeEnum;
 import com.commercetools.sync.services.impl.StateServiceImpl;
-import com.commercetools.sync.services.impl.UnresolvedReferencesServiceImpl;
 import com.commercetools.sync.states.StateSync;
 import com.commercetools.sync.states.StateSyncOptions;
 import com.commercetools.sync.states.StateSyncOptionsBuilder;
 import com.commercetools.sync.states.helpers.StateReferenceResolver;
 import com.commercetools.sync.states.helpers.StateSyncStatistics;
-import com.commercetools.sync.states.utils.StateTransformUtils;
-import io.sphere.sdk.client.BadGatewayException;
-import io.sphere.sdk.client.BadRequestException;
-import io.sphere.sdk.client.ConcurrentModificationException;
-import io.sphere.sdk.client.SphereClient;
-import io.sphere.sdk.customobjects.queries.CustomObjectQuery;
-import io.sphere.sdk.models.LocalizedString;
-import io.sphere.sdk.models.Reference;
-import io.sphere.sdk.queries.PagedQueryResult;
-import io.sphere.sdk.states.State;
-import io.sphere.sdk.states.StateDraft;
-import io.sphere.sdk.states.StateDraftBuilder;
-import io.sphere.sdk.states.StateRole;
-import io.sphere.sdk.states.StateType;
-import io.sphere.sdk.states.commands.StateCreateCommand;
-import io.sphere.sdk.states.commands.StateUpdateCommand;
-import io.sphere.sdk.states.queries.StateQuery;
-import io.sphere.sdk.states.queries.StateQueryBuilder;
+import io.vrap.rmf.base.client.ApiHttpMethod;
+import io.vrap.rmf.base.client.ApiHttpResponse;
+import io.vrap.rmf.base.client.error.BadGatewayException;
+import io.vrap.rmf.base.client.utils.CompletableFutureUtils;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
-import java.util.function.Function;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import javax.annotation.Nonnull;
-import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-@SuppressWarnings("unchecked")
 class StateSyncIT {
 
-  String keyA;
-  String keyB;
-  String keyC;
+  private String keyA;
+  private String keyB;
 
-  List<String> errorCallBackMessages;
-  List<String> warningCallBackMessages;
-  List<Throwable> errorCallBackExceptions;
-  String key = "";
-  private ReferenceIdToKeyCache referenceIdToKeyCache;
+  private List<String> errorCallBackMessages;
+  private List<String> warningCallBackMessages;
+  private List<Throwable> errorCallBackExceptions;
+  private String key = "";
 
   @AfterAll
   static void tearDown() {
-    deleteStatesFromTargetAndSource();
+    deleteStatesFromTarget();
   }
 
   @BeforeEach
@@ -92,28 +62,30 @@ class StateSyncIT {
     key = "state-" + current().nextInt();
     keyA = "state-A-" + current().nextInt();
     keyB = "state-B-" + current().nextInt();
-    keyC = "state-C-" + current().nextInt();
 
     final StateDraft stateDraft =
-        StateDraftBuilder.of(key, StateType.LINE_ITEM_STATE)
-            .name(LocalizedString.ofEnglish("state-name"))
-            .description(LocalizedString.ofEnglish("state-desc"))
-            .roles(Collections.singleton(StateRole.RETURN))
+        StateDraftBuilder.of()
+            .key(key)
+            .type(StateTypeEnum.LINE_ITEM_STATE)
+            .name(ofEnglish("state-name"))
+            .description(ofEnglish("state-desc"))
+            .roles(List.of(StateRoleEnum.RETURN))
             .initial(false)
             .build();
 
-    executeBlocking(CTP_TARGET_CLIENT.execute(StateCreateCommand.of(stateDraft)));
+    CTP_TARGET_CLIENT.states().create(stateDraft).executeBlocking();
     errorCallBackMessages = new ArrayList<>();
     warningCallBackMessages = new ArrayList<>();
     errorCallBackExceptions = new ArrayList<>();
-    referenceIdToKeyCache = new CaffeineReferenceIdToKeyCacheImpl();
   }
 
   @Test
   void sync_withNewState_shouldCreateState() {
     final StateDraft stateDraft =
-        StateDraftBuilder.of("new-state", StateType.REVIEW_STATE)
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+        StateDraftBuilder.of()
+            .key("new-state")
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS))
             .build();
 
     final StateSyncOptions stateSyncOptions = StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).build();
@@ -122,7 +94,7 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 1, 0, 0, 0);
   }
@@ -130,17 +102,16 @@ class StateSyncIT {
   @Test
   void sync_withCreateStateException_shouldPrintMessage() {
     final StateDraft stateDraft =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE)
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+        StateDraftBuilder.of()
+            .key(keyA)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS))
             .build();
 
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-    final StateCreateCommand command = any(StateCreateCommand.class);
-    when(spyClient.execute(command))
-        .thenReturn(exceptionallyCompletedFuture(new BadRequestException("test error message")));
+    final ProjectApiRoot client = buildClientWithBadGatewayExceptionOnPost();
 
     final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(spyClient)
+        StateSyncOptionsBuilder.of(client)
             .errorCallback(
                 (exception, oldResource, newResource, updateActions) -> {
                   errorCallBackMessages.add(exception.getMessage());
@@ -152,23 +123,25 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
+    assertThat(errorCallBackExceptions).isNotEmpty();
+    assertThat(errorCallBackMessages).isNotEmpty();
+    assertThat(errorCallBackMessages.get(0))
         .contains(format("Failed to create draft with key: '%s'", keyA));
   }
 
   @Test
-  void sync_withNewStateWithoutRole_shouldRemoveRole() {
+  void sync_withOldStateWithRoleAndNewStateWithoutRole_shouldRemoveRole() {
     final StateDraft stateDraft =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE).roles(Collections.emptySet()).build();
+        StateDraftBuilder.of().key(keyA).type(StateTypeEnum.REVIEW_STATE).roles(List.of()).build();
 
     final StateDraft stateDraftTarget =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE)
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+        StateDraftBuilder.of()
+            .key(keyA)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS))
             .build();
     createStateInTarget(stateDraftTarget);
 
@@ -178,32 +151,32 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 0, 1, 0, 0);
-    CtpQueryUtils.queryAll(
-            CTP_TARGET_CLIENT,
-            StateQueryBuilder.of().plusPredicates(q -> q.key().is(keyA)).build(),
-            Function.identity())
-        .thenApply(
-            fetchedCategories ->
-                fetchedCategories.stream().flatMap(List::stream).collect(Collectors.toList()))
-        .thenAccept(
-            resultStates -> {
-              Assertions.assertThat(resultStates.size()).isEqualTo(1);
-              Assertions.assertThat(resultStates.get(0).getRoles().isEmpty()).isTrue();
-            })
-        .toCompletableFuture()
-        .join();
+
+    final State fetchedState = getStateByKey(CTP_TARGET_CLIENT, keyA).get();
+
+    assertThat(fetchedState.getRoles()).isEmpty();
   }
 
   @Test
-  void sync_withNewStateWithoutRole_shouldDoNothing() {
+  void sync_withOldStateWithoutRoleAndNewStateWithoutRole_shouldDoNothing() {
     final StateDraft stateDraft =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE).roles(Collections.emptySet()).build();
+        StateDraftBuilder.of()
+            .key(keyA)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of())
+            .initial(true)
+            .build();
 
     final StateDraft stateDraftTarget =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE).roles(Collections.emptySet()).build();
+        StateDraftBuilder.of()
+            .key(keyA)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of())
+            .initial(true)
+            .build();
     createStateInTarget(stateDraftTarget);
 
     final StateSyncOptions stateSyncOptions = StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).build();
@@ -212,34 +185,22 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
-    assertThat(stateSyncStatistics).hasValues(1, 0, 1, 0, 0);
-    CtpQueryUtils.queryAll(
-            CTP_TARGET_CLIENT,
-            StateQueryBuilder.of().plusPredicates(q -> q.key().is(keyA)).build(),
-            Function.identity())
-        .thenApply(
-            fetchedCategories ->
-                fetchedCategories.stream().flatMap(List::stream).collect(Collectors.toList()))
-        .thenAccept(
-            resultStates -> {
-              Assertions.assertThat(resultStates.size()).isEqualTo(1);
-              Assertions.assertThat(resultStates.get(0).getRoles().isEmpty()).isTrue();
-            })
-        .toCompletableFuture()
-        .join();
+    assertThat(stateSyncStatistics).hasValues(1, 0, 0, 0, 0);
   }
 
   @Test
   void sync_withNewStateWithNewRole_shouldAddRole() {
     final StateDraft stateDraft =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE)
-            .roles(asSet(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+        StateDraftBuilder.of()
+            .key(keyA)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS))
             .build();
 
     final StateDraft stateDraftTarget =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE).roles(Collections.emptySet()).build();
+        StateDraftBuilder.of().key(keyA).type(StateTypeEnum.REVIEW_STATE).roles(List.of()).build();
     createStateInTarget(stateDraftTarget);
 
     final StateSyncOptions stateSyncOptions = StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).build();
@@ -248,35 +209,25 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 0, 1, 0, 0);
-    CtpQueryUtils.queryAll(
-            CTP_TARGET_CLIENT,
-            StateQueryBuilder.of().plusPredicates(q -> q.key().is(keyA)).build(),
-            Function.identity())
-        .thenApply(
-            fetchedCategories ->
-                fetchedCategories.stream().flatMap(List::stream).collect(Collectors.toList()))
-        .thenAccept(
-            resultStates -> {
-              Assertions.assertThat(resultStates.size()).isEqualTo(1);
-              Assertions.assertThat(resultStates.get(0).getRoles().size()).isEqualTo(1);
-            })
-        .toCompletableFuture()
-        .join();
+
+    final State fetchedState = getStateByKey(CTP_TARGET_CLIENT, keyA).get();
+
+    assertThat(fetchedState.getRoles()).hasSize(1);
   }
 
   @Test
   void sync_withNewStateWihCreationException_shouldPrintErrorMessage() {
     final StateDraft stateDraft =
-        StateDraftBuilder.of(keyA, StateType.REVIEW_STATE)
-            .roles(asSet(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+        StateDraftBuilder.of()
+            .key(keyA)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS))
             .build();
 
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-    final StateCreateCommand command = any(StateCreateCommand.class);
-    when(spyClient.execute(command)).thenReturn(completedFuture(any(State.class)));
+    final ProjectApiRoot spyClient = buildClientWithInvalidResponseReturned();
     final StateSyncOptions stateSyncOptions =
         StateSyncOptionsBuilder.of(spyClient)
             .errorCallback(
@@ -290,25 +241,26 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
+    assertThat(errorCallBackExceptions).isNotEmpty();
+    assertThat(errorCallBackMessages).isNotEmpty();
+    assertThat(errorCallBackMessages.get(0))
         .contains(format("Failed to process the StateDraft with key: '%s'", keyA));
-    Assertions.assertThat(warningCallBackMessages).isEmpty();
+    assertThat(warningCallBackMessages).isEmpty();
   }
 
   @Test
   void sync_WithUpdatedState_ShouldUpdateState() {
     // preparation
-    String key = this.key;
     final StateDraft stateDraft =
-        StateDraftBuilder.of(key, StateType.REVIEW_STATE)
+        StateDraftBuilder.of()
+            .key(this.key)
+            .type(StateTypeEnum.REVIEW_STATE)
             .name(ofEnglish("state-name-updated"))
             .description(ofEnglish("state-desc-updated"))
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+            .roles(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS)
             .initial(true)
             .build();
 
@@ -318,34 +270,34 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     // assertion
     assertThat(stateSyncStatistics).hasValues(1, 0, 1, 0, 0);
 
     final Optional<State> oldStateAfter = getStateByKey(CTP_TARGET_CLIENT, key);
 
-    Assertions.assertThat(oldStateAfter)
+    assertThat(oldStateAfter)
         .hasValueSatisfying(
             state -> {
-              Assertions.assertThat(state.getType()).isEqualTo(StateType.REVIEW_STATE);
-              Assertions.assertThat(state.getName()).isEqualTo(ofEnglish("state-name-updated"));
-              Assertions.assertThat(state.getDescription())
-                  .isEqualTo(ofEnglish("state-desc-updated"));
-              Assertions.assertThat(state.getRoles())
-                  .isEqualTo(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS));
-              Assertions.assertThat(state.isInitial()).isEqualTo(true);
+              assertThat(state.getType()).isEqualTo(StateTypeEnum.REVIEW_STATE);
+              assertThat(state.getName()).isEqualTo(ofEnglish("state-name-updated"));
+              assertThat(state.getDescription()).isEqualTo(ofEnglish("state-desc-updated"));
+              assertThat(state.getRoles())
+                  .isEqualTo(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS));
+              assertThat(state.getInitial()).isEqualTo(true);
             });
-    deleteStates(CTP_TARGET_CLIENT, Optional.empty());
   }
 
   @Test
   void sync_withEqualState_shouldNotUpdateState() {
-    StateDraft stateDraft =
-        StateDraftBuilder.of(key, StateType.LINE_ITEM_STATE)
+    final StateDraft stateDraft =
+        StateDraftBuilder.of()
+            .key(this.key)
+            .type(StateTypeEnum.LINE_ITEM_STATE)
             .name(ofEnglish("state-name"))
             .description(ofEnglish("state-desc"))
-            .roles(Collections.singleton(StateRole.RETURN))
+            .roles(StateRoleEnum.RETURN)
             .initial(false)
             .build();
 
@@ -355,7 +307,7 @@ class StateSyncIT {
 
     // test
     final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(singletonList(stateDraft)).toCompletableFuture().join();
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 0, 0, 0, 0);
   }
@@ -363,7 +315,7 @@ class StateSyncIT {
   @Test
   void sync_withChangedStateButConcurrentModificationException_shouldRetryAndUpdateState() {
     // preparation
-    final SphereClient spyClient = buildClientWithConcurrentModificationUpdate();
+    final ProjectApiRoot spyClient = buildClientWithConcurrentModificationUpdate();
 
     List<String> errorCallBackMessages = new ArrayList<>();
     List<String> warningCallBackMessages = new ArrayList<>();
@@ -373,38 +325,28 @@ class StateSyncIT {
     final StateSync stateSync = new StateSync(spyOptions);
 
     final StateDraft stateDraft =
-        StateDraftBuilder.of(key, StateType.REVIEW_STATE)
+        StateDraftBuilder.of()
+            .key(key)
+            .type(StateTypeEnum.REVIEW_STATE)
             .name(ofEnglish("state-name-updated"))
             .description(ofEnglish("state-desc-updated"))
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+            .roles(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS)
             .initial(true)
             .build();
 
     final StateSyncStatistics syncStatistics =
-        executeBlocking(stateSync.sync(singletonList(stateDraft)));
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     assertThat(syncStatistics).hasValues(1, 0, 1, 0, 0);
-    Assertions.assertThat(errorCallBackExceptions).isEmpty();
-    Assertions.assertThat(errorCallBackMessages).isEmpty();
-    Assertions.assertThat(warningCallBackMessages).isEmpty();
-  }
-
-  @Nonnull
-  private SphereClient buildClientWithConcurrentModificationUpdate() {
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-
-    final StateUpdateCommand updateCommand = any(StateUpdateCommand.class);
-    when(spyClient.execute(updateCommand))
-        .thenReturn(exceptionallyCompletedFuture(new ConcurrentModificationException()))
-        .thenCallRealMethod();
-
-    return spyClient;
+    assertThat(errorCallBackExceptions).isEmpty();
+    assertThat(errorCallBackMessages).isEmpty();
+    assertThat(warningCallBackMessages).isEmpty();
   }
 
   @Test
   void sync_WithConcurrentModificationExceptionAndFailedFetch_ShouldFailToReFetchAndUpdate() {
     // preparation
-    final SphereClient spyClient =
+    final ProjectApiRoot spyClient =
         buildClientWithConcurrentModificationUpdateAndFailedFetchOnRetry();
 
     final StateSyncOptions spyOptions =
@@ -422,24 +364,26 @@ class StateSyncIT {
     final StateSync stateSync = new StateSync(spyOptions);
 
     final StateDraft stateDraft =
-        StateDraftBuilder.of(key, StateType.REVIEW_STATE)
+        StateDraftBuilder.of()
+            .key(key)
+            .type(StateTypeEnum.REVIEW_STATE)
             .name(ofEnglish("state-name-updated"))
             .description(ofEnglish("state-desc-updated"))
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+            .roles(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS)
             .initial(true)
             .build();
 
     final StateSyncStatistics syncStatistics =
-        executeBlocking(stateSync.sync(singletonList(stateDraft)));
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     // Test and assertion
     assertThat(syncStatistics).hasValues(1, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackMessages).hasSize(1);
-    Assertions.assertThat(errorCallBackExceptions).hasSize(1);
+    assertThat(errorCallBackMessages).hasSize(1);
+    assertThat(errorCallBackExceptions).hasSize(1);
 
-    Assertions.assertThat(errorCallBackExceptions.get(0).getCause())
+    assertThat(errorCallBackExceptions.get(0).getCause())
         .isExactlyInstanceOf(BadGatewayException.class);
-    Assertions.assertThat(errorCallBackMessages.get(0))
+    assertThat(errorCallBackMessages.get(0))
         .contains(
             format(
                 "Failed to update state with key: '%s'. Reason: Failed to fetch from CTP while retrying "
@@ -447,31 +391,13 @@ class StateSyncIT {
                 stateDraft.getKey()));
   }
 
-  @Nonnull
-  private SphereClient buildClientWithConcurrentModificationUpdateAndFailedFetchOnRetry() {
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-
-    final StateUpdateCommand updateCommand = any(StateUpdateCommand.class);
-    when(spyClient.execute(updateCommand))
-        .thenReturn(exceptionallyCompletedFuture(new ConcurrentModificationException()))
-        .thenCallRealMethod();
-
-    final StateQuery stateQuery = any(StateQuery.class);
-    when(spyClient.execute(stateQuery))
-        .thenCallRealMethod() // Call real fetch on fetching matching states
-        .thenReturn(exceptionallyCompletedFuture(new BadGatewayException()));
-
-    return spyClient;
-  }
-
   @Test
   void sync_WithConcurrentModificationExceptionAndUnexpectedDelete_ShouldFailToReFetchAndUpdate() {
     // preparation
-    final SphereClient spyClient =
+    final ProjectApiRoot spyClient =
         buildClientWithConcurrentModificationUpdateAndNotFoundFetchOnRetry();
 
     List<String> errorCallBackMessages = new ArrayList<>();
-    List<String> warningCallBackMessages = new ArrayList<>();
     List<Throwable> errorCallBackExceptions = new ArrayList<>();
     final StateSyncOptions spyOptions =
         StateSyncOptionsBuilder.of(spyClient)
@@ -480,53 +406,34 @@ class StateSyncIT {
                   errorCallBackMessages.add(exception.getMessage());
                   errorCallBackExceptions.add(exception.getCause());
                 })
-            .warningCallback(
-                (exception, newResource, oldResource) ->
-                    warningCallBackMessages.add(exception.getMessage()))
             .build();
 
     final StateSync stateSync = new StateSync(spyOptions);
 
     final StateDraft stateDraft =
-        StateDraftBuilder.of(key, StateType.REVIEW_STATE)
+        StateDraftBuilder.of()
+            .key(key)
+            .type(StateTypeEnum.REVIEW_STATE)
             .name(ofEnglish("state-name-updated"))
             .description(ofEnglish("state-desc-updated"))
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
+            .roles(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS)
             .initial(true)
             .build();
 
     final StateSyncStatistics syncStatistics =
-        executeBlocking(stateSync.sync(singletonList(stateDraft)));
+        stateSync.sync(List.of(stateDraft)).toCompletableFuture().join();
 
     // Test and assertion
     assertThat(syncStatistics).hasValues(1, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackMessages).hasSize(1);
-    Assertions.assertThat(errorCallBackExceptions).hasSize(1);
+    assertThat(errorCallBackMessages).hasSize(1);
+    assertThat(errorCallBackExceptions).hasSize(1);
 
-    Assertions.assertThat(errorCallBackMessages.get(0))
+    assertThat(errorCallBackMessages.get(0))
         .contains(
             format(
                 "Failed to update state with key: '%s'. Reason: Not found when attempting to fetch while"
                     + " retrying after concurrency modification.",
                 stateDraft.getKey()));
-  }
-
-  @Nonnull
-  private SphereClient buildClientWithConcurrentModificationUpdateAndNotFoundFetchOnRetry() {
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-
-    final StateUpdateCommand stateUpdateCommand = any(StateUpdateCommand.class);
-    when(spyClient.execute(stateUpdateCommand))
-        .thenReturn(exceptionallyCompletedFuture(new ConcurrentModificationException()))
-        .thenCallRealMethod();
-
-    final StateQuery stateQuery = any(StateQuery.class);
-
-    when(spyClient.execute(stateQuery))
-        .thenCallRealMethod() // Call real fetch on fetching matching states
-        .thenReturn(completedFuture(PagedQueryResult.empty()));
-
-    return spyClient;
   }
 
   @Test
@@ -536,8 +443,11 @@ class StateSyncIT {
         IntStream.range(0, 10)
             .mapToObj(
                 i ->
-                    StateDraft.of("key" + i, StateType.REVIEW_STATE)
-                        .withName(ofEnglish("name" + i)))
+                    StateDraftBuilder.of()
+                        .key("key" + i)
+                        .type(StateTypeEnum.REVIEW_STATE)
+                        .name(ofEnglish("name" + i))
+                        .build())
             .collect(Collectors.toList());
 
     final StateSyncOptions stateSyncOptions =
@@ -553,150 +463,7 @@ class StateSyncIT {
   }
 
   @Test
-  void sync_WithNotExistentStates_ShouldResolveStateLater() {
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-
-    StateDraft[] draftsWithReplacesKeys =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, asList(stateB, stateC))
-            .join()
-            .toArray(new StateDraft[2]);
-    final StateDraft stateADraft =
-        createStateDraftReferencingStateDrafts(keyA, draftsWithReplacesKeys);
-    final List<StateDraft> stateDrafts = asList(stateADraft);
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).batchSize(1).build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(1, 0, 0, 0, 1);
-
-    final UnresolvedReferencesService<WaitingToBeResolvedTransitions> unresolvedTransitionsService =
-        new UnresolvedReferencesServiceImpl<>(stateSyncOptions);
-
-    Set<WaitingToBeResolvedTransitions> result =
-        unresolvedTransitionsService
-            .fetch(
-                Collections.singleton(keyA),
-                CUSTOM_OBJECT_TRANSITION_CONTAINER_KEY,
-                WaitingToBeResolvedTransitions.class)
-            .toCompletableFuture()
-            .join();
-
-    Assertions.assertThat(result.size()).isEqualTo(1);
-    WaitingToBeResolvedTransitions waitingToBeResolvedTransitions = result.iterator().next();
-    Assertions.assertThat(
-            waitingToBeResolvedTransitions
-                .getMissingTransitionStateKeys()
-                .containsAll(asList(keyB, keyC)))
-        .isTrue();
-    Assertions.assertThat(waitingToBeResolvedTransitions.getStateDraft().getKey()).isEqualTo(keyA);
-  }
-
-  @Test
-  void sync_WithAllExistentStates_ShouldResolveAllStates() {
-
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-
-    final StateDraft stateADraft = createStateDraft(keyA, stateB, stateC);
-    final State stateA = createStateInSource(stateADraft);
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).batchSize(3).build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateA, stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(3, 3, 0, 0, 0);
-    Assertions.assertThat(stateSyncStatistics.getReportMessage())
-        .isEqualTo(
-            "Summary: 3 state(s) were processed in total "
-                + "(3 created, 0 updated, 0 failed to sync and 0 state(s) with missing transition(s)).");
-    final UnresolvedReferencesService<WaitingToBeResolvedTransitions> unresolvedTransitionsService =
-        new UnresolvedReferencesServiceImpl<>(stateSyncOptions);
-
-    Set<WaitingToBeResolvedTransitions> result =
-        unresolvedTransitionsService
-            .fetch(
-                Collections.singleton(keyA),
-                CUSTOM_OBJECT_TRANSITION_CONTAINER_KEY,
-                WaitingToBeResolvedTransitions.class)
-            .toCompletableFuture()
-            .join();
-
-    Assertions.assertThat(result.size()).isEqualTo(0);
-  }
-
-  @Test
-  void sync_WithExceptionWhenFetchingUnresolvedTransition_ShouldPrintErrorMessage() {
-
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-
-    final StateDraft stateADraft = createStateDraft(keyA, stateB, stateC);
-    final State stateA = createStateInSource(stateADraft);
-
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-
-    when(spyClient.execute(any(CustomObjectQuery.class)))
-        .thenReturn(exceptionallyCompletedFuture(new BadRequestException("a test exception")))
-        .thenReturn(exceptionallyCompletedFuture(new ConcurrentModificationException()))
-        .thenCallRealMethod();
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(spyClient)
-            .batchSize(3)
-            .errorCallback(
-                (exception, oldResource, newResource, updateActions) -> {
-                  errorCallBackMessages.add(exception.getMessage());
-                  errorCallBackExceptions.add(exception.getCause());
-                })
-            .warningCallback(
-                (exception, newResource, oldResource) ->
-                    warningCallBackMessages.add(exception.getMessage()))
-            .build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateA, stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(3, 1, 0, 2, 1);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
-        .contains(format("Failed to fetch StateDrafts waiting to be resolved with keys"));
-  }
-
-  @Test
   void sync_WithListOfNullElements_ShouldPrintErrorMessage() {
-
     final StateSyncOptions stateSyncOptions =
         StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT)
             .batchSize(3)
@@ -716,403 +483,19 @@ class StateSyncIT {
         stateSync.sync(Collections.singletonList(null)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0)).contains("StateDraft is null.");
-  }
-
-  @Test
-  void sync_WithUpdatedTransition_ShouldUpdateTransitions() {
-
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-    final StateDraft tagetStateCDraft = createStateDraft(keyC);
-    final State targetStateC = createStateInTarget(tagetStateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-    final StateDraft tagetStateBDraft = createStateDraft(keyB, targetStateC);
-    final State targetStateB = createStateInTarget(tagetStateBDraft);
-
-    final StateDraft stateADraft = createStateDraft(keyA, stateB, stateC);
-    final State stateA = createStateInSource(stateADraft);
-    final StateDraft tagetStateADraft = createStateDraft(keyA, targetStateB);
-    final State targetStateA = createStateInTarget(tagetStateADraft);
-
-    Assertions.assertThat(targetStateB.getTransitions().size()).isEqualTo(1);
-    Assertions.assertThat(targetStateA.getTransitions().size()).isEqualTo(1);
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).batchSize(3).build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateA, stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(3, 0, 1, 0, 0);
-
-    CtpQueryUtils.queryAll(
-            CTP_TARGET_CLIENT,
-            StateQueryBuilder.of().plusPredicates(q -> q.key().is(keyA)).build(),
-            Function.identity())
-        .thenApply(
-            fetchedCategories ->
-                fetchedCategories.stream().flatMap(List::stream).collect(Collectors.toList()))
-        .thenAccept(
-            resultStates -> {
-              Assertions.assertThat(resultStates.size()).isEqualTo(1);
-              Assertions.assertThat(resultStates.get(0).getTransitions().size()).isEqualTo(2);
-            })
-        .toCompletableFuture()
-        .join();
-  }
-
-  @Test
-  void sync_WithExceptionOnResolvingTransition_ShouldUpdateTransitions() {
-
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-    when(spyClient.execute(any()))
-        .thenCallRealMethod()
-        .thenReturn(exceptionallyCompletedFuture(new BadGatewayException()));
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(spyClient)
-            .batchSize(3)
-            .errorCallback(
-                (exception, oldResource, newResource, updateActions) -> {
-                  errorCallBackMessages.add(exception.getMessage());
-                  errorCallBackExceptions.add(exception.getCause());
-                })
-            .warningCallback(
-                (exception, newResource, oldResource) ->
-                    warningCallBackMessages.add(exception.getMessage()))
-            .build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(2, 0, 0, 2, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
-        .contains("Failed to fetch existing states with keys");
-    Assertions.assertThat(warningCallBackMessages).isEmpty();
-  }
-
-  @Test
-  void sync_WithDeletedTransition_ShouldRemoveTransitions() {
-
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-    final StateDraft tagetStateCDraft = createStateDraft(keyC);
-    final State targetStateC = createStateInTarget(tagetStateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-    final StateDraft tagetStateBDraft = createStateDraft(keyB, targetStateC);
-    final State targetStateB = createStateInTarget(tagetStateBDraft);
-
-    final StateDraft stateADraft = createStateDraft(keyA, stateB);
-    final State stateA = createStateInSource(stateADraft);
-    final StateDraft tagetStateADraft = createStateDraft(keyA, targetStateB, targetStateC);
-    final State targetStateA = createStateInTarget(tagetStateADraft);
-
-    Assertions.assertThat(targetStateB.getTransitions().size()).isEqualTo(1);
-    Assertions.assertThat(targetStateA.getTransitions().size()).isEqualTo(2);
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).batchSize(3).build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateA, stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(3, 0, 1, 0, 0);
-
-    CtpQueryUtils.queryAll(
-            CTP_TARGET_CLIENT,
-            StateQueryBuilder.of().plusPredicates(q -> q.key().is(keyA)).build(),
-            Function.identity())
-        .thenApply(
-            fetchedCategories ->
-                fetchedCategories.stream().flatMap(List::stream).collect(Collectors.toList()))
-        .thenAccept(
-            resultStates -> {
-              Assertions.assertThat(resultStates.size()).isEqualTo(1);
-              Assertions.assertThat(resultStates.get(0).getTransitions().size()).isEqualTo(1);
-            })
-        .toCompletableFuture()
-        .join();
-  }
-
-  @Test
-  void sync_WithEmptyNewTransition_ShouldRemoveTransitions() {
-
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-    final StateDraft tagetStateCDraft = createStateDraft(keyC);
-    final State targetStateC = createStateInTarget(tagetStateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-    final StateDraft tagetStateBDraft = createStateDraft(keyB, targetStateC);
-    final State targetStateB = createStateInTarget(tagetStateBDraft);
-
-    final StateDraft stateADraft = createStateDraft(keyA);
-    final State stateA = createStateInSource(stateADraft);
-    final StateDraft tagetStateADraft = createStateDraft(keyA, targetStateB, targetStateC);
-    final State targetStateA = createStateInTarget(tagetStateADraft);
-
-    Assertions.assertThat(targetStateB.getTransitions().size()).isEqualTo(1);
-    Assertions.assertThat(targetStateA.getTransitions().size()).isEqualTo(2);
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).batchSize(3).build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateA, stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(3, 0, 1, 0, 0);
-
-    CtpQueryUtils.queryAll(
-            CTP_TARGET_CLIENT,
-            StateQueryBuilder.of().plusPredicates(q -> q.key().is(keyA)).build(),
-            Function.identity())
-        .thenApply(
-            fetchedCategories ->
-                fetchedCategories.stream().flatMap(List::stream).collect(Collectors.toList()))
-        .thenAccept(
-            resultStates -> {
-              Assertions.assertThat(resultStates.size()).isEqualTo(1);
-              Assertions.assertThat(resultStates.get(0).getTransitions()).isNull();
-            })
-        .toCompletableFuture()
-        .join();
-  }
-
-  @Test
-  void sync_WithNullTransitions_TargetStateTransitionsShouldBeNull() {
-
-    final StateDraft stateDraft = createStateDraft(keyA);
-    final State state = createStateInSource(stateDraft);
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).batchSize(3).build();
-
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(state))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(1, 1, 0, 0, 0);
-
-    CtpQueryUtils.queryAll(
-            CTP_TARGET_CLIENT,
-            StateQueryBuilder.of().plusPredicates(q -> q.key().is(keyA)).build(),
-            Function.identity())
-        .thenApply(
-            fetchedCategories ->
-                fetchedCategories.stream().flatMap(List::stream).collect(Collectors.toList()))
-        .thenAccept(
-            resultStates -> {
-              Assertions.assertThat(resultStates.size()).isEqualTo(1);
-              Assertions.assertThat(resultStates.get(0).getTransitions()).isNull();
-            })
-        .toCompletableFuture()
-        .join();
-  }
-
-  @Test
-  void sync_WithStateWithoutKey_ShouldAddErrorMessage() {
-    String nameA = "state-A";
-    final StateDraft stateADraft =
-        StateDraftBuilder.of(null, StateType.REVIEW_STATE)
-            .name(LocalizedString.ofEnglish(nameA))
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
-            .initial(true)
-            .build();
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT)
-            .batchSize(3)
-            .errorCallback(
-                (exception, oldResource, newResource, updateActions) -> {
-                  errorCallBackMessages.add(exception.getMessage());
-                  errorCallBackExceptions.add(exception.getCause());
-                })
-            .warningCallback(
-                (exception, newResource, oldResource) ->
-                    warningCallBackMessages.add(exception.getMessage()))
-            .build();
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(Arrays.asList(stateADraft)).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(1, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
-        .contains("StateDraft with name:" + " LocalizedString(en -> state-A) doesn't have a key.");
-    Assertions.assertThat(warningCallBackMessages).isEmpty();
-  }
-
-  @Test
-  void sync_WithUpdatedTransitionAndClientThrowsError_ShouldAddErrorMessage() {
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-    final StateDraft tagetStateCDraft = createStateDraft(keyC);
-    final State targetStateC = createStateInTarget(tagetStateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-    final StateDraft tagetStateBDraft = createStateDraft(keyB, targetStateC);
-    final State targetStateB = createStateInTarget(tagetStateBDraft);
-
-    final StateDraft stateADraft = createStateDraft(keyA, stateB, stateC);
-    final State stateA = createStateInSource(stateADraft);
-    final StateDraft tagetStateADraft = createStateDraft(keyA, targetStateB);
-    final State targetStateA = createStateInTarget(tagetStateADraft);
-
-    Assertions.assertThat(targetStateB.getTransitions().size()).isEqualTo(1);
-    Assertions.assertThat(targetStateA.getTransitions().size()).isEqualTo(1);
-
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-
-    final StateUpdateCommand updateCommand = any(StateUpdateCommand.class);
-    when(spyClient.execute(updateCommand))
-        .thenReturn(exceptionallyCompletedFuture(new BadRequestException("a test exception")))
-        .thenReturn(exceptionallyCompletedFuture(new ConcurrentModificationException()))
-        .thenCallRealMethod();
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(spyClient)
-            .batchSize(3)
-            .errorCallback(
-                (exception, oldResource, newResource, updateActions) -> {
-                  errorCallBackMessages.add(exception.getMessage());
-                  errorCallBackExceptions.add(exception.getCause());
-                })
-            .warningCallback(
-                (exception, newResource, oldResource) ->
-                    warningCallBackMessages.add(exception.getMessage()))
-            .build();
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateA, stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(3, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
-        .contains(" detailMessage: a test exception");
-    Assertions.assertThat(warningCallBackMessages).isEmpty();
-  }
-
-  @Test
-  void sync_WithoutAnyNewStateDraft_ShouldProcessNothing() {
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(CTP_TARGET_CLIENT).batchSize(3).build();
-    final StateSync stateSync = new StateSync(stateSyncOptions);
-    final StateSyncStatistics stateSyncStatistics =
-        stateSync.sync(Collections.emptyList()).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(0, 0, 0, 0, 0);
-  }
-
-  @Test
-  void sync_WithFailureInKeysToIdCreation_ShouldAddErrorMessage() {
-    final StateDraft stateCDraft = createStateDraft(keyC);
-    final State stateC = createStateInSource(stateCDraft);
-    final StateDraft tagetStateCDraft = createStateDraft(keyC);
-    final State targetStateC = createStateInTarget(tagetStateCDraft);
-
-    final StateDraft stateBDraft = createStateDraft(keyB, stateC);
-    final State stateB = createStateInSource(stateBDraft);
-    final StateDraft tagetStateBDraft = createStateDraft(keyB, targetStateC);
-    final State targetStateB = createStateInTarget(tagetStateBDraft);
-
-    final StateDraft stateADraft = createStateDraft(keyA, stateB, stateC);
-    final State stateA = createStateInSource(stateADraft);
-    final StateDraft tagetStateADraft = createStateDraft(keyA, targetStateB);
-    final State targetStateA = createStateInTarget(tagetStateADraft);
-    Assertions.assertThat(targetStateB.getTransitions().size()).isEqualTo(1);
-    Assertions.assertThat(targetStateA.getTransitions().size()).isEqualTo(1);
-
-    final SphereClient spyClient = spy(CTP_TARGET_CLIENT);
-    when(spyClient.execute(any(ResourceKeyIdGraphQlRequest.class)))
-        .thenReturn(exceptionallyCompletedFuture(new BadRequestException("a test exception")))
-        .thenReturn(exceptionallyCompletedFuture(new ConcurrentModificationException()))
-        .thenCallRealMethod();
-
-    final StateSyncOptions stateSyncOptions =
-        StateSyncOptionsBuilder.of(spyClient)
-            .batchSize(3)
-            .errorCallback(
-                (exception, oldResource, newResource, updateActions) -> {
-                  errorCallBackMessages.add(exception.getMessage());
-                  errorCallBackExceptions.add(exception.getCause());
-                })
-            .warningCallback(
-                (exception, newResource, oldResource) ->
-                    warningCallBackMessages.add(exception.getMessage()))
-            .build();
-
-    final List<StateDraft> stateDrafts =
-        StateTransformUtils.toStateDrafts(
-                CTP_SOURCE_CLIENT, referenceIdToKeyCache, Arrays.asList(stateA, stateB, stateC))
-            .join();
-    // test
-    final StateSyncStatistics stateSyncStatistics =
-        new StateSync(stateSyncOptions).sync(stateDrafts).toCompletableFuture().join();
-
-    assertThat(stateSyncStatistics).hasValues(3, 0, 0, 3, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
-        .isEqualTo("Failed to build a cache of keys to ids.");
-    Assertions.assertThat(warningCallBackMessages).isEmpty();
+    assertThat(errorCallBackExceptions).isNotEmpty();
+    assertThat(errorCallBackMessages).isNotEmpty();
+    assertThat(errorCallBackMessages.get(0)).contains("StateDraft is null.");
   }
 
   @Test
   void sync_WithStateWithEmptyTransition_ShouldAddErrorMessage() {
     final StateDraft stateCDraft =
-        StateDraftBuilder.of(keyC, StateType.REVIEW_STATE)
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
-            .transitions(new HashSet<>(Arrays.asList(Reference.of(State.referenceTypeId(), ""))))
+        StateDraftBuilder.of()
+            .key(keyB)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS))
+            .transitions(StateResourceIdentifierBuilder.of().id("").build())
             .initial(true)
             .build();
     final StateSyncOptions stateSyncOptions =
@@ -1129,25 +512,24 @@ class StateSyncIT {
             .build();
     // test
     final StateSyncStatistics stateSyncStatistics =
-        new StateSync(stateSyncOptions)
-            .sync(Arrays.asList(stateCDraft))
-            .toCompletableFuture()
-            .join();
+        new StateSync(stateSyncOptions).sync(List.of(stateCDraft)).toCompletableFuture().join();
 
     assertThat(stateSyncStatistics).hasValues(1, 0, 0, 1, 0);
-    Assertions.assertThat(errorCallBackExceptions).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages).isNotEmpty();
-    Assertions.assertThat(errorCallBackMessages.get(0))
-        .isEqualTo(format("StateDraft with key: '%s' has invalid state transitions", keyC));
-    Assertions.assertThat(warningCallBackMessages).isEmpty();
+    assertThat(errorCallBackExceptions).isNotEmpty();
+    assertThat(errorCallBackMessages).isNotEmpty();
+    assertThat(errorCallBackMessages.get(0))
+        .isEqualTo(format("StateDraft with key: '%s' has invalid state transitions", keyB));
+    assertThat(warningCallBackMessages).isEmpty();
   }
 
   @Test
   void sync_WithStateWithEmptyTransitionShouldBeResolved_ShouldAddErrorMessage() {
     final StateDraft stateCDraft =
-        StateDraftBuilder.of(keyC, StateType.REVIEW_STATE)
-            .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
-            .transitions(new HashSet<>(Arrays.asList(Reference.of(State.referenceTypeId(), ""))))
+        StateDraftBuilder.of()
+            .key(keyB)
+            .type(StateTypeEnum.REVIEW_STATE)
+            .roles(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS)
+            .transitions(StateResourceIdentifierBuilder.of().id("").build())
             .initial(true)
             .build();
     final StateSyncOptions stateSyncOptions =
@@ -1163,61 +545,143 @@ class StateSyncIT {
                     warningCallBackMessages.add(exception.getMessage()))
             .build();
     // test
-    StateServiceImpl stateService = new StateServiceImpl(stateSyncOptions);
+    final StateServiceImpl stateService = new StateServiceImpl(stateSyncOptions);
     final StateReferenceResolver stateReferenceResolver =
         new StateReferenceResolver(stateSyncOptions, stateService);
 
-    CompletionStage<StateDraft> result = stateReferenceResolver.resolveReferences(stateCDraft);
+    final CompletionStage<StateDraft> result =
+        stateReferenceResolver.resolveReferences(stateCDraft);
     result
         .exceptionally(
             exception -> {
-              Assertions.assertThat(exception.getMessage())
+              assertThat(exception.getMessage())
                   .contains(
                       format(
                           "Failed to resolve 'transition' reference on StateDraft with key:'%s",
-                          keyC));
+                          keyB));
               return null;
             })
         .toCompletableFuture()
         .join();
   }
 
-  private State createStateInSource(final StateDraft draft) {
-    return executeBlocking(CTP_SOURCE_CLIENT.execute(StateCreateCommand.of(draft)));
-  }
-
-  private State createStateInTarget(final StateDraft draft) {
-    return executeBlocking(CTP_TARGET_CLIENT.execute(StateCreateCommand.of(draft)));
-  }
-
-  private StateDraft createStateDraftReferencingStateDrafts(
-      final String key, final StateDraft... transitionStatesDraft) {
-    List<Reference<State>> references = new ArrayList<>();
-    if (transitionStatesDraft.length > 0) {
-      for (StateDraft transitionState : transitionStatesDraft) {
-        references.add(referenceOfId(transitionState.getKey()));
-      }
-    }
-    return createStateDraftWithReference(key, references);
-  }
-
-  private StateDraft createStateDraft(final String key, final State... transitionStates) {
-    List<Reference<State>> references = null;
-    if (transitionStates.length > 0) {
-      references = new ArrayList<>();
-      for (State transitionState : transitionStates) {
-        references.add(referenceOfId(transitionState.getId()));
-      }
-    }
-    return createStateDraftWithReference(key, references);
+  private void createStateInTarget(final StateDraft draft) {
+    CTP_TARGET_CLIENT.states().create(draft).execute().thenApply(ApiHttpResponse::getBody).join();
   }
 
   private StateDraft createStateDraftWithReference(
-      final String key, final List<Reference<State>> references) {
-    return StateDraftBuilder.of(key, StateType.REVIEW_STATE)
-        .roles(Collections.singleton(StateRole.REVIEW_INCLUDED_IN_STATISTICS))
-        .transitions(null == references ? null : new HashSet<>(references))
+      final String key, final List<StateResourceIdentifier> references) {
+    return StateDraftBuilder.of()
+        .key(key)
+        .type(StateTypeEnum.REVIEW_STATE)
+        .roles(List.of(StateRoleEnum.REVIEW_INCLUDED_IN_STATISTICS))
+        .transitions(references)
         .initial(true)
         .build();
+  }
+
+  private ProjectApiRoot buildClientWithBadGatewayExceptionOnPost() {
+    final ProjectApiRoot testClient =
+        ApiRootBuilder.of(
+                request -> {
+                  final String uri = request.getUri() != null ? request.getUri().toString() : "";
+                  final ApiHttpMethod method = request.getMethod();
+                  if (uri.contains("states") && method == ApiHttpMethod.POST) {
+                    return CompletableFutureUtils.exceptionallyCompletedFuture(
+                        createBadGatewayException());
+                  }
+                  return CTP_TARGET_CLIENT.getApiHttpClient().execute(request);
+                })
+            .withApiBaseUrl(CTP_TARGET_CLIENT.getApiHttpClient().getBaseUri())
+            .build(CTP_TARGET_CLIENT.getProjectKey());
+    return testClient;
+  }
+
+  private ProjectApiRoot buildClientWithConcurrentModificationUpdate() {
+    final AtomicInteger requestCount = new AtomicInteger();
+    final ProjectApiRoot testClient =
+        ApiRootBuilder.of(
+                request -> {
+                  final String uri = request.getUri() != null ? request.getUri().toString() : "";
+                  final ApiHttpMethod method = request.getMethod();
+                  if (uri.contains("states/")
+                      && method == ApiHttpMethod.POST
+                      && requestCount.getAndIncrement() == 0) {
+                    return CompletableFutureUtils.exceptionallyCompletedFuture(
+                        createConcurrentModificationException());
+                  }
+                  return CTP_TARGET_CLIENT.getApiHttpClient().execute(request);
+                })
+            .withApiBaseUrl(CTP_TARGET_CLIENT.getApiHttpClient().getBaseUri())
+            .build(CTP_TARGET_CLIENT.getProjectKey());
+    return testClient;
+  }
+
+  private ProjectApiRoot buildClientWithInvalidResponseReturned() {
+    final ProjectApiRoot testClient =
+        ApiRootBuilder.of(
+                request -> {
+                  final String uri = request.getUri() != null ? request.getUri().toString() : "";
+                  final ApiHttpMethod method = request.getMethod();
+                  if (uri.contains("states") && method == ApiHttpMethod.POST) {
+                    return CompletableFuture.completedFuture(
+                        new ApiHttpResponse<>(202, null, "{}".getBytes(StandardCharsets.UTF_8)));
+                  }
+                  return CTP_TARGET_CLIENT.getApiHttpClient().execute(request);
+                })
+            .withApiBaseUrl(CTP_TARGET_CLIENT.getApiHttpClient().getBaseUri())
+            .build(CTP_TARGET_CLIENT.getProjectKey());
+    return testClient;
+  }
+
+  private ProjectApiRoot buildClientWithConcurrentModificationUpdateAndFailedFetchOnRetry() {
+    final AtomicInteger updateRequestCount = new AtomicInteger();
+    final AtomicInteger getRequestCount = new AtomicInteger();
+    final ProjectApiRoot testClient =
+        ApiRootBuilder.of(
+                request -> {
+                  final String uri = request.getUri() != null ? request.getUri().toString() : "";
+                  final ApiHttpMethod method = request.getMethod();
+                  if (uri.contains("states/")
+                      && method == ApiHttpMethod.POST
+                      && updateRequestCount.getAndIncrement() == 0) {
+                    return CompletableFutureUtils.exceptionallyCompletedFuture(
+                        createConcurrentModificationException());
+                  } else if (uri.contains("states")
+                      && method == ApiHttpMethod.GET
+                      && getRequestCount.getAndIncrement() == 1) {
+                    return CompletableFutureUtils.exceptionallyCompletedFuture(
+                        createBadGatewayException());
+                  }
+                  return CTP_TARGET_CLIENT.getApiHttpClient().execute(request);
+                })
+            .withApiBaseUrl(CTP_TARGET_CLIENT.getApiHttpClient().getBaseUri())
+            .build(CTP_TARGET_CLIENT.getProjectKey());
+    return testClient;
+  }
+
+  private ProjectApiRoot buildClientWithConcurrentModificationUpdateAndNotFoundFetchOnRetry() {
+    final AtomicInteger updateRequestCount = new AtomicInteger();
+    final AtomicInteger getRequestCount = new AtomicInteger();
+    final ProjectApiRoot testClient =
+        ApiRootBuilder.of(
+                request -> {
+                  final String uri = request.getUri() != null ? request.getUri().toString() : "";
+                  final ApiHttpMethod method = request.getMethod();
+                  if (uri.contains("states/")
+                      && method == ApiHttpMethod.POST
+                      && updateRequestCount.getAndIncrement() == 0) {
+                    return CompletableFutureUtils.exceptionallyCompletedFuture(
+                        createConcurrentModificationException());
+                  } else if (uri.contains("states")
+                      && method == ApiHttpMethod.GET
+                      && getRequestCount.getAndIncrement() == 1) {
+                    return CompletableFuture.failedFuture(createNotFoundException());
+                  }
+                  return CTP_TARGET_CLIENT.getApiHttpClient().execute(request);
+                })
+            .withApiBaseUrl(CTP_TARGET_CLIENT.getApiHttpClient().getBaseUri())
+            .build(CTP_TARGET_CLIENT.getProjectKey());
+    return testClient;
   }
 }
